11735 cardbus: cast between incompatible function types Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>